[package]
name = "rust2"
version = "0.1.0"
authors = ["root"]

[dependencies]
rustyline = "1.0.0"
lazy_static = "1.0.1"

regex = "1.0.0"
itertools = "0.7.4"
fnv = "1.0.3"


[[bin]]
name = "step0_repl"
path = "step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "step1_read_print.rs"

[[bin]]
name = "step2_eval"
path = "step2_eval.rs"

[[bin]]
name = "step3_env"
path = "step3_env.rs"

[[bin]]
name = "step4_if_fn_do"
path = "step4_if_fn_do.rs"

[[bin]]
name = "step5_tco"
path = "step5_tco.rs"

[[bin]]
name = "step6_file"
path = "step6_file.rs"

[[bin]]
name = "step7_quote"
path = "step7_quote.rs"

[[bin]]
name = "step8_macros"
path = "step8_macros.rs"

[[bin]]
name = "step9_try"
path = "step9_try.rs"

[[bin]]
name = "stepA_mal"
path = "stepA_mal.rs"
